Murphy System/archive/artifacts/outputs/workspace_output_1769155760_2772.txt
  File "<stdin>", line 11
    """Define a new workflow"""
       ^^^^^^
SyntaxError: invalid syntax
